# smolc

./: Cargo.toml
benchmarks/: 1dconv.json  2dconvol.json  ackermann.json  adj2csr.json  adler32.json  arithmetic-series.json  armstrong.json  bbs.json  bin-search.json  binary-fmt.json  binary-search.json  binpow.json  birthday.json  bitshift.json  bitwise-ops.json  braille.json  bubblesort.json  catalan.json  char-poly.json  check-primes.json  cholesky.json  collatz.json  conjugate-gradient.json  connected-components.json  cordic.json  csrmv.json  dayofweek.json  dead-branch.json  delannoy.json  digital-root.json  dot-product.json  eight-queens.json  euclid.json  euler.json  fact.json  factors.json  fib.json  fib_recursive.json  filter.json  fitsinside.json  (+80 more)
smolc/: Cargo.toml
smolc/src/: main.rs
